--- a/FarmsRamirezBML/FarmsRamirezBML.csproj
+++ b/FarmsRamirezBML/FarmsRamirezBML.csproj
@@ -66,5 +66,8 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
