--- a/SimiSoft/SimiSoft.csproj
+++ b/SimiSoft/SimiSoft.csproj
@@ -150,6 +150,7 @@
     </Compile>
     <None Include="App.config" />
     <None Include="Properties\DataSources\FarmsRamirezBML.Producto.datasource" />
+    <None Include="Properties\DataSources\FarmsRamirezBML.Proveedor.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
