--- a/SimiSoft/SimiSoft.csproj
+++ b/SimiSoft/SimiSoft.csproj
@@ -149,6 +149,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="App.config" />
+    <None Include="Properties\DataSources\FarmsRamirezBML.Cliente.datasource" />
     <None Include="Properties\DataSources\FarmsRamirezBML.Producto.datasource" />
     <None Include="Properties\DataSources\FarmsRamirezBML.Proveedor.datasource" />
     <None Include="Properties\Settings.settings">
