--- a/FarmsRamirezBML/packages.config
+++ b/FarmsRamirezBML/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Dapper" version="2.0.123" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.5" targetFramework="net472" />
+  <package id="Zen.Barcode.Rendering.Framework" version="3.1.10729.1" targetFramework="net472" />
 </packages>
