--- a/FarmsRamirezBML/FarmsRamirezBML.csproj
+++ b/FarmsRamirezBML/FarmsRamirezBML.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
+    <Compile Include="Roles.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Venta.cs" />
     <Compile Include="VentaDetalle.cs" />
