--- a/SimiSoft/SimiSoft.csproj
+++ b/SimiSoft/SimiSoft.csproj
@@ -155,6 +155,12 @@
     <Compile Include="frmNMProveedor.Designer.cs">
       <DependentUpon>frmNMProveedor.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmNMRoles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNMRoles.Designer.cs">
+      <DependentUpon>frmNMRoles.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmProductos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -207,6 +213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmNMProveedor.resx">
       <DependentUpon>frmNMProveedor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNMRoles.resx">
+      <DependentUpon>frmNMRoles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmProductos.resx">
       <DependentUpon>frmProductos.cs</DependentUpon>
