--- a/FarmsRamirezBML/FarmsRamirezBML.csproj
+++ b/FarmsRamirezBML/FarmsRamirezBML.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categorias.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="FormaPago.cs" />
     <Compile Include="Misc.cs" />
