--- a/FarmsRamirezBML/FarmsRamirezBML.csproj
+++ b/FarmsRamirezBML/FarmsRamirezBML.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="FormaPago.cs" />
     <Compile Include="Misc.cs" />
+    <Compile Include="Permisos.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
