--- a/SimiSoft/Properties/Settings.settings
+++ b/SimiSoft/Properties/Settings.settings
@@ -1,14 +1,14 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SimiSoft.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TECNIPRINT.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="bd_tecniprintConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=USER6663-PC;Initial Catalog=bd_tecniprint;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=tcp:USER6663-PC\SERVERTP,49500;Initial Catalog=TECNIPRINT;Persist Security Info=True;User ID=sa;Password=12345&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=USER6663-PC;Initial Catalog=bd_tecniprint;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=tcp:USER6663-PC\SERVERTP,49500;Initial Catalog=TECNIPRINT;Persist Security Info=True;User ID=sa;Password=12345</Value>
     </Setting>
   </Settings>
 </SettingsFile>
