--- a/SimiSoft/SimiSoft.csproj
+++ b/SimiSoft/SimiSoft.csproj
@@ -277,6 +277,7 @@
     <None Include="Properties\DataSources\FarmsRamirezBML.Permisos.datasource" />
     <None Include="Properties\DataSources\FarmsRamirezBML.Producto.datasource" />
     <None Include="Properties\DataSources\FarmsRamirezBML.Proveedor.datasource" />
+    <None Include="Properties\DataSources\FarmsRamirezBML.TipoUsuario.datasource" />
     <None Include="Properties\DataSources\FarmsRamirezBML.Usuario.datasource" />
     <None Include="Properties\DataSources\FarmsRamirezBML.Venta.datasource" />
     <None Include="Properties\Settings.settings">
